# delaunay-triangulation

./: .gitignore  CMakeLists.txt  README.md
scripts/: plot.py
src/triangulation/: main.cpp  types.h  utility.h
src/triangulation/algorithms/: interface.h
src/triangulation/algorithms/divide-and-conquer/: convex-hull.cpp  convex-hull.h  environment.h  triangulate.cpp  triangulate.h
